add 'Show Comments' link and JS to call getAllComments function

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -32,6 +32,8 @@
   <%= f.submit %>
 <% end %>
 
+<br />
+<input type="button" value="Show Comments" id="show_comments">
 <div id="comments_area">
   
 </div>
